# AccountingGame

./: .env  .env.development  .env.production  .gitignore  .pdm-python  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
Game/assets/: index-Ce7_eY9X.js  phaser-CQJfve02.js
Game/assets/objects/conveyor-belt/left-belt/: left-belt_atlas.json
Game/assets/objects/conveyor-belt/right-belt/: right-belt_anim.json  right-belt_atlas.json
Game/assets/objects/conveyor-belt/up-belt/: up-belt_anim.json
Previous/: index.html
Previous/assets/: index-Ce7_eY9X.js
Previous/assets/objects/conveyor-belt/down-belt/: down-belt_atlas.json
public/assets/objects/conveyor-belt/down-belt/: down-belt_anim.json
public/assets/objects/conveyor-belt/left-belt/: left-belt_anim.json
public/assets/objects/conveyor-belt/up-belt/: up-belt_atlas.json
src/: main.js  preloader.js
src/accountinggame_backend/: .env  main.py  schema.sql
src/gameobjects/: Ball.js  Basket.js  Bullet.js  ConveyorBelt.js  MusicManager.js  Player.js  Tooltips.js
src/scenes/: GameOverScene.js  HudScene.js  MainMenuScene.js  MainScene.js  MenuScene.js  PauseScene.js  SettingScene.js  SplashScene.js
